force-app/main/default/objects/Sales_Commission__c/Sales_Commission__c.object-meta.xml
<CustomObject>
    <label>Sales Commission</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Sales Commission</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Commission</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>