force-app/main/default/objects/Sales_Commission__c/fields/Agent_Broker__c.field-meta.xml
<CustomField>
    <fullName>Agent_Broker__c</fullName>
    <label>Agent/Broker</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Sales Commission</relationshipLabel>
    <relationshipName>Commission</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>