force-app/main/default/objects/Sales_Commission__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <formula>Commission__c * Opportunity__r.Proposal__r.Trion_Admin_Fee__c</formula>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>