force-app/main/default/objects/Sales_Commission__c/fields/Override_Commission__c.field-meta.xml
<CustomField>
    <fullName>Override_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Commission</label>
    <type>Checkbox</type>
</CustomField>