force-app/main/default/objects/Sales_Commission__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Sales Commission</relationshipLabel>
    <relationshipName>Commission</relationshipName>
    <type>Lookup</type>
</CustomField>